@@ -1,16 +1,0 @@
-def clone():
-    print """The `gs-clone` command has been removed. It is performed
-as part of the gitify process.
-    """
-
-
-def fetch():
-    print """The `gs-fetch` command is deprecated. Use `gitify fetch`
-instead.
-    """
-
-
-def commit():
-    print """The `gs-commit` command is deprecated. Use `gitify push`
-instead.
-    """
