@@ -11,6 +11,9 @@
 * updated tests to work with git 1.6.x
   [tomster]
 
+* removed deprecated entry points for clone, fetch and commit
+  [tomster]
+
 0.5 - 2009-08-15 (a.k.a. HAR2009 release)
 -----------------------------------------
 
